# django-http-exceptions

./: .coverage  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  tests.yml
django_http_exceptions/: __init__.py  _exceptions.py  exceptions.py  middleware.py  utils.py
test/: manage.py
test/tests/: settings.py  testing.py  tests.py  urls.py  views.py
tests/: settings.py  testing.py  tests.py  urls.py  views.py
